--- a/src/styles/Side.module.css
+++ b/src/styles/Side.module.css
@@ -61,6 +61,7 @@
     width: 100%;
     flex-direction: row;
     justify-content: space-between;
+    border-right: 0;
     align-items: center;
     flex-wrap: wrap;
     position: absolute;
@@ -79,7 +80,10 @@
 
   .footer {
     position: fixed;
-    bottom: 0;
-    padding: 12px 24px;
+    top: 24px;
+    right: 24px;
+    padding: 0;
+    border: none;
+    background-color: transparent;
   }
 }
