--- a/src/styles/Side.module.css
+++ b/src/styles/Side.module.css
@@ -66,7 +66,7 @@
     flex-wrap: wrap;
     position: absolute;
     top: 0;
-    padding-bottom: 12px;
+    padding: 32px 0 12px;
   }
   .aside {
     width: 100%;
