--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -12,7 +12,8 @@ body {
   height: 100%;
   font-size: 14px;
   line-height: 20px;
-  background: var(--main-bg);
+  background: var(--df-bg);
+  overflow: hidden;
 }
 a {
   color: inherit;
