--- a/src/styles/Side.module.css
+++ b/src/styles/Side.module.css
@@ -66,7 +66,7 @@
     flex-wrap: wrap;
     position: absolute;
     top: 0;
-    padding: 32px 0 12px;
+    padding: 24px 0 12px;
   }
   .aside {
     width: 100%;
@@ -80,6 +80,7 @@
 
   .footer {
     position: absolute;
+    width: auto;
     top: 24px;
     right: 24px;
     padding: 0;
