--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,3 +1,4 @@
+@import './font.scss';
 /* Global styles */
 
 *,
@@ -14,6 +15,7 @@ body {
   line-height: 20px;
   background: var(--df-bg);
   overflow: hidden;
+  font-family: 'Noto Sans KR';
 }
 a {
   color: inherit;
