--- a/src/styles/theme.css
+++ b/src/styles/theme.css
@@ -4,6 +4,7 @@
 :root {
   --main-bg: var(--oc-white);
   --df-bg: var(--oc-gray-1);
+  --bg-lv1: var(--oc-gray-0);
   --txt-df-color: var(--oc-gray-9);
   --txt-disabled: var(--oc-gray-3);
   --bd-lv-1: var(--oc-gray-4);
@@ -14,6 +15,7 @@
 [data-theme='dark'] {
   --main-bg: var(--oc-gray-9);
   --df-bg: var(--oc-gray-8);
+  --bg-lv1: var(--oc-gray-8);
   --txt-df-color: var(--oc-white);
   --txt-disabled: var(--oc-gray-7);
   --bd-lv-1: var(--oc-gray-7);
