--- a/src/styles/MyCalendar.scss
+++ b/src/styles/MyCalendar.scss
@@ -8,6 +8,9 @@
     span {
       background: var(--oc-grape-1);
       color: var(--oc-grape-9);
+      border-radius: 4px;
+      padding: 0 2px;
+      margin: 0 2px;
     }
   }
 }
