--- a/src/styles/Side.module.scss
+++ b/src/styles/Side.module.scss
@@ -15,6 +15,7 @@
 
   .header {
     padding: 32px 24px 24px 24px;
+    width: 100%;
     h1 {
       font-size: 1.6rem;
       line-height: 2rem;
@@ -64,6 +65,17 @@
     position: absolute;
     top: 0;
     padding: 24px 0 12px;
+
+    .header {
+      padding-top: 0;
+      padding-right: 100px;
+      h1 {
+        text-align: left;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+      }
+    }
 
     .aside {
       width: 100%;
