--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -21,6 +21,10 @@ a {
   color: inherit;
   text-decoration: none;
 }
+ul,
+li {
+  list-style: none;
+}
 
 @media screen and (max-width: 768px) {
   html,
