--- a/src/styles/Main.module.scss
+++ b/src/styles/Main.module.scss
@@ -3,6 +3,7 @@
 .main-wrap {
   background-color: var(--main-bg);
   width: 100%;
+  height: 100vh;
   color: var(--txt-df-color);
   .tab-wrap {
     background-color: var(--df-bg);
