레이아웃 수정

--- a/src/styles/Side.module.scss
+++ b/src/styles/Side.module.scss
@@ -2,7 +2,7 @@
 
 .side-wrap {
   position: relative;
-  height: 100vh;
+  height: 100%;
   width: 280px;
   box-sizing: border-box;
   border-right: 1px solid var(--bd-lv-1);
