--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -13,13 +13,16 @@ body {
   height: 100%;
   font-size: 14px;
   line-height: 20px;
-  background: var(--main-bg);
+  background: var(--df-bg);
   overflow: hidden;
   font-family: 'Noto Sans KR';
 }
 a {
   color: inherit;
   text-decoration: none;
+}
+#root {
+  height: 100%;
 }
 ul,
 li {
