--- a/src/styles/Main.module.scss
+++ b/src/styles/Main.module.scss
@@ -3,20 +3,18 @@
 .main-wrap {
   background-color: var(--main-bg);
   width: 100%;
-  height: 100vh;
+  height: 100%;
   color: var(--txt-df-color);
   .tab-wrap {
     background-color: var(--df-bg);
   }
   .content-wrap {
     padding: 24px;
-    padding-bottom: 120px;
     overflow: auto;
     height: calc(100% - 48px);
     position: relative;
     &.attach {
       padding: 0;
-      padding-bottom: 120px;
     }
   }
   .tab-on {
@@ -31,7 +29,7 @@
 
 @media screen and (max-width: 768px) {
   .main-wrap {
-    height: calc(100vh - 124px);
+    height: calc(100% - 124px);
     margin-top: 124px;
     .tab-wrap {
       display: none;
