--- a/src/styles/MyCalendar.scss
+++ b/src/styles/MyCalendar.scss
@@ -5,14 +5,16 @@
   margin-top: 24px;
 }
 .my-calendar-date {
-  font-family: 'JetBrains Mono', 'Noto Sans KR';
   margin-top: 24px;
   span {
-    background: var(--oc-grape-1);
-    color: var(--oc-grape-9);
-    border-radius: 4px;
-    padding: 0 2px;
-    margin: 0 2px;
+    font-family: 'JetBrains Mono', 'Noto Sans KR';
+    &.bg {
+      background: var(--oc-grape-1);
+      color: var(--oc-grape-9);
+      border-radius: 4px;
+      padding: 0 2px;
+      margin-left: 8px;
+    }
   }
 }
 
