--- a/src/styles/Side.module.scss
+++ b/src/styles/Side.module.scss
@@ -19,7 +19,21 @@
     h1 {
       font-size: 1.4rem;
       line-height: 2rem;
-      text-align: right;
+      // text-align: right;
+      span {
+        margin-right: 4px;
+        background-image: linear-gradient(
+          -225deg,
+          #7742b2 0%,
+          #f180ff 52%,
+          #fd8bd9 100%
+        );
+        background-size: 200% 200%;
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+        background-clip: text;
+        // animation: gradient-move 5s linear infinite;
+      }
     }
   }
 
@@ -96,5 +110,14 @@
       border: none;
       background-color: transparent;
     }
+  }
+}
+
+@keyframes gradient-move {
+  0% {
+    background-position: 200% 0;
+  }
+  100% {
+    background-position: -200% 0;
   }
 }
